# Model libraries

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Utils)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Bishop)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/King)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Knight)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Pawn)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Queen)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/Rook)

